@@ -4,7 +4,8 @@ Changelog
 2.1.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add option to synchronize Solr with catalog in maintenance view.
+  [buchi]
 
 
 2.1.2 (2018-05-15)
